Harden eForm browser PDF renderer paths
Signed-off-by: Cecil Foubert <Cfoubert0782@conestogac.on.ca>